--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "back": "nodemon server/index.js --watch",
+    "start": "node server/index.js",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "paper": "^0.12.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
@@ -27,5 +30,8 @@
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
+  },
+  "engines": {
+    "node": "12.16.1"
   }
 }
